# critical

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DATABASE.md  Makefile  Makefile.xplatform  PLAN.md  PROJECT-CONTENTS-IMPLEMENTATION-WHITEPAPER.md  README.md  WHITEPAPER.md  docker-compose.yml  test_loop.sh
.claude/: settings.json
.claude/skills/cli/: SKILL.md
.claude/skills/frontend/: SKILL.md
.claude/skills/itest-pytest/: SKILL.md
.claude/skills/rust-backend/: SKILL.md
.github/workflows/: cli.yml
backend/: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  admins.txt  config.yaml  docker-compose.yml  project_sample.yaml  user_sample.yaml
backend/crit-cli/: Cargo.toml
backend/crit-cli/src/: apply.rs  auth.rs  cli.rs  main.rs  template.rs
backend/crit-res/: Cargo.toml
backend/crit-res/src/: lib.rs
backend/crit-server/: Cargo.toml  config.env
backend/crit-server/src/: errors.rs  exlogging.rs  main.rs  state.rs
backend/crit-server/src/api/v1/: mod.rs
backend/crit-server/src/api/v1/adm/: mod.rs  user_managements_endpoints.rs
backend/crit-server/src/api/v1/dashboard/: mod.rs  user_dashboard.rs
backend/crit-server/src/api/v1/ops/: crud.rs
backend/crit-server/src/api/v1/state/: fetch.rs
backend/crit-server/src/auth/: invites.rs  mod.rs
backend/crit-server/src/db/: hashmap_db.rs  index_view.rs  indexable_consts.rs  issue_tracker.rs  mod.rs
backend/crit-server/src/db/core/: mod.rs
backend/crit-server/src/middleware/: mod.rs
backend/crit-server/src/models/: managers.rs  mod.rs
backend/crit-server/src/test/: mod.rs
backend/crit-server/src/utils/: mod.rs
backend/crit-shared/: Cargo.toml
backend/crit-shared/src/: entities.rs  lib.rs  requests.rs  state_entities.rs
backend/crit_resource_macro/: Cargo.toml
backend/crit_resource_macro/src/: lib.rs
backend/critsrv/: .gitignore  Cargo.toml
backend/critsrv/src/api/v1/: auth.rs  mod.rs
backend/critsrv/src/models/: managers.rs
backend/gitops_lib/: Cargo.toml
backend/gitops_lib/src/: lib.rs
backend/gitops_lib/src/store/: config.rs  filesystem.rs  mod.rs  qstorage.rs  qstorage_persy.rs  qstorage_sled.rs
backend/gitops_macros/: Cargo.toml
backend/gitops_macros/src/: lib.rs  macros.rs
backend/itests/: .gitignore  README.md  pyproject.toml
backend/itests/tests/: auth_test.py  avatar_test.py  debug_test.py  gitops_permissions_test.py  gitops_test.py  group_test.py  pagination_test.py  search_test.py  task_test.py
backend/shared/src/: lib.rs  managed_id.rs
backend/src/: cache.rs  config.rs  error.rs  errors.rs  godmode.rs  main.rs  models.rs  state.rs
backend/src/api/v1/: auth.rs  debug.rs  gitops.rs  mod.rs  scoped_gitops.rs  static_files.rs  upload.rs
backend/src/api/v1/authentication/: login.rs
backend/src/auth/: invites.rs  mod.rs
backend/src/controllers/: gitops_controller.rs  group_controller.rs  membership_controller.rs  mod.rs  project_controller.rs  task_controller.rs  ticket_controller.rs  user_controller.rs
backend/src/db/: mock.rs  mod.rs
backend/src/db/arangodb/: audit.rs  entities.rs  gitops.rs  init.rs  mod.rs  permissions.rs
backend/src/db/inmemory/: mod.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: entities.rs  entities_expanded.rs  managers.rs  mod.rs
backend/src/services/: github.rs  image_processing.rs  mod.rs  objectstore.rs  offloadmq.rs
backend/src/test/: file_storage.rs  godmode_test.rs  integration_tests.rs  login_test.rs  mod.rs
backend/src/validation/: mod.rs  naming.rs
cli/: Cargo.toml  README.md
cli/src/: api.rs  context.rs  main.rs
cli/src/commands/: apply.rs  gitops.rs  login.rs  mod.rs
cli/tests/: cli_test.rs
cypress/: .eslintrc.json  .gitignore  README.md  cypress.config.ts  package.json  playwright.config.ts  tsconfig.json
cypress/e2e/: auth.cy.ts  auth.spec.ts  home.cy.ts  home.spec.ts
cypress/playwright-report/: index.html
cypress/support/: commands.ts  e2e.ts
docs/: README.md  access-control.md  api.md  architecture.md  cli.md  database.md  deployment.md  development.md  models.md
e2e-tests/: .gitignore  README.md  package.json  tsconfig.json
e2e-tests/e2e/: auth.spec.ts  groups.spec.ts  home.spec.ts
e2e-tests/e2e/helpers/: auth.ts  groups.ts
e2e-tests/fixtures/: users.json
frontend/: README.md  custom-theme.less  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/app/: app.css  root.tsx  routes.ts
frontend/app/components/: AclEditor.tsx  AuthPage.tsx  Button.tsx  Card.tsx  CodeBlock.tsx  CriticalLandingPage.jsx  Header.tsx  Input.tsx  LogoCritical.tsx  Modal.tsx  MorphDropdown.jsx  MorphModal.tsx  MorphingModal.tsx  Paragraph.tsx  ProjectContainer.tsx  ResourcePicker.tsx  ScrollableLogWindow.tsx  SideMenu.tsx  Table.tsx  Tabs.tsx  ThemeCombobox.tsx  TopBar.tsx  YamlEditor.tsx  index.ts
frontend/app/contexts/: ThemeContext.tsx
frontend/app/layouts/: app-layout.tsx
frontend/app/lib/: authFetch.ts  models.ts  utils.ts
frontend/app/routes/: auth.tsx  dashboard.tsx  groups.tsx  home.tsx  project.tsx  sign-in.tsx  sign-up.tsx  ui-gallery.tsx  uigallery.tsx
frontend/app/routes/project/: index.tsx  settings.tsx  tickets.tsx
frontend/app/toolkit/: Button.tsx  ClientOnly.tsx  FullWidthContentContainer.tsx  Input.tsx  LogoCritical.tsx  Modal.tsx  MorphModal.tsx  TopAppHeader.jsx  TopPanel.tsx  UiGallery.tsx  typography.tsx
frontend/app/welcome/: welcome.tsx
frontend/src/: App.tsx  Apps.ts  index.css  main.tsx  utils.ts
frontend/src/components/: AppMenu.css  AppMenu.tsx  AppMenuDrawer.tsx
frontend/src/components/layout/: NotificationsDrawer.tsx  TopBar.tsx
frontend/src/components/ui/: LiquidGlassButton.tsx  OsDropdown.css  OsDropdown.tsx
frontend/src/components/user/: AuthProvider.tsx  Login.tsx  (+4 more)
frontend/src/services/: authService.ts
shared/: Cargo.toml
shared/derive/: Cargo.toml
shared/derive/src/: lib.rs
shared/src/: data_models.rs  lib.rs  models.rs  util_models.rs
test-db/: 00-permissions.yaml  01-users.yaml  02-groups.yaml  03-memberships.yaml  04-projects.yaml  populate.sh  show.sh
