[package]
name = "critical"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart", "macros"] } 
tokio = { version = "1.45.1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] } # Bumped slightly for compatibility
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.17"
jsonwebtoken = "9.3.1"
chrono = { version = "0.4", features = ["serde"] }
moka = { version = "0.12", features = ["sync", "future"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
anyhow = "1.0"
percent-encoding = "2.3"
thiserror = "2.0"
async-trait = "0.1" # Required for custom extractor
serde_yaml = "0.9.34"
async-recursion = "0.3"
csv = "1.3.1"
lexiclean = "0.0.1"
reqwest = {version = "0.12.18", features = ["stream", "json"]}
bincode = {version = "2.0.1", features = ["serde"]}
surrealdb = { version = "2.3.3", features = ["kv-surrealkv"] }

[dev-dependencies]
tempfile = "3"
