[package]
name = "axum-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["ws", "multipart"]}
bcrypt = "0.17.1"
dotenvy = "0.15.7"
env_logger = "0.11.8"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
uuid = { version = "1.17.0", features = ["v7", "serde"] }
log = "0.4.28"
chrono = { version = "0.4.42", features = ["serde"] }
axum-test = { version = "18.2.1", features = ["old-json-diff"] }
arangors = "0.6.0"
utoipa = { version = "5.4.0", features = ["auto_into_responses", "axum_extras", "openapi_extensions", "repr", "url", "uuid", "yaml"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-axum = "0.2.0"
utoipa_auto_discovery = "0.3.0"
utoipauto = "0.2.0"
bitflags = { version = "2.10.0", features = ["serde", "std"] }
reqwest = "0.12.24"
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
url = "2.5.7"
async-trait = "0.1.89"
bytes = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
ulid = "1"
object_store = { version = "0.11", features = ["aws", "http"] }
crit-shared = { path = "../shared" }

[dev-dependencies]
serial_test = "3.3.1"
