[package]
name = "crit-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
bitflags = { version = "2.10.0", features = ["serde", "std"] }
uuid = { version = "1.17.0", features = ["v7", "serde"] }
serde_json = "1"
crit-derive = { path = "derive" }
