[package]
name = "crit-cli"
version = "0.1.0"
edition = "2024"


[dependencies]
gitops_lib = { path = "../gitops_lib" }
crit-shared = { path = "../crit-shared" }
tokio.workspace = true
dialoguer = "0.11.0"
clap = {version = "4.5.40", features = ["derive"] }
console = "0.16.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
serde_yaml.workspace = true
dirs = "6.0.0"
indicatif = "0.18.0"
anyhow = "1.0.98"
