[package]
name = "gitops_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gitops_macros = { path = "../gitops_macros" } # Link to our proc-macro crate
syn = { version = "2.0", features = ["full", "extra-traits"] }
anyhow = "1.0.98"
tokio = "1.45.1"
serde_yaml = "0.9.34"
urlencoding = "2.1.3"
thiserror = "2.0.12"
